--- a/style.css
+++ b/style.css
@@ -16,13 +16,13 @@ body{
 
 .container{
     margin:10% auto;
-    padding: 80px 0;
+    padding: x 0;
     /* text-align: center; */
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 0.5rem ;
+    gap: 3rem ;
 }
 
 .container h1{
@@ -41,6 +41,7 @@ input{
     font-size: 18px;
     color:white;
     text-align: center;
+    
 }
 
 button{
